--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -6,6 +6,7 @@
     border-radius: var(--card-border-radius);
     box-shadow: var(--shadow);
 
+    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
