added sorting modules

--- a/games/sortingModule/style.css
+++ b/games/sortingModule/style.css
@@ -134,6 +134,13 @@ html, body{
     font-size: clamp(5rem, 12vw, 8rem);
 }
 
+.bubble{
+    border: 4px solid #6fe3ff; /* soft cyan */
+    background: radial-gradient(circle at top,
+        #e6faff,
+        #8fdfff
+    );
+}
 
 
 
